--- a/package.json
+++ b/package.json
@@ -30,7 +30,10 @@
 
 	},
 	"dependencies": {
-		"gulp-util": "3.0.7",
+		"plugin-error": "^1.0.1",
+		"fancy-log": "^2.0.0",
+		"ansi-colors": "^4.1.3",
+		"vinyl": "^2.2.1",
 		"gulp-path": "3.0.3",
 		"through2": "2.0.1",
 		"csv-parse": "0.0.6"
